--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-fastapi
-uvicorn
-pyTelegramBotAPI
-requests
-python-dotenv
-cachetools
-apscheduler
-pytz
-gtts
-matplotlib
+fastapi==0.95.2
+uvicorn==0.22.0
+pyTelegramBotAPI==4.11.0
+requests==2.28.2
+python-dotenv==1.0.0
+cachetools==5.3.0
+apscheduler==3.9.1
+pytz==2023.3
+gTTS==2.3.2
+matplotlib==3.7.1
+pandas==2.0.1
+numpy==1.24.3
+Pillow==9.5.0
