--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 fastapi==0.95.2
 uvicorn==0.22.0
-pyTelegramBotAPI==4.11.0
+python-telegram-bot==20.3
 requests==2.28.2
 python-dotenv==1.0.0
 cachetools==5.3.0
