--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-python-telegram-bot==20.3
-requests==2.28.2
-python-dotenv==1.0.0
-cachetools==5.3.0
-apscheduler==3.9.1
-pytz==2023.3
-gTTS==2.3.2
-matplotlib==3.7.1
-setuptools==68.0.0
+aiogram>=3.0.0
+fastapi
+uvicorn
+python-dotenv
